@@ -1,3 +1,8 @@
+2006-04-25  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* unix/tkUnixFont.c (TkpGetFontFamilies): Fix crash caused when the
+	XServer returns invalid font names. [Bug 1475865]
+
 2006-04-22  Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/tkMacOSXEmbed.c:
